--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,29 @@
-body {
-    background-color: rgb(231, 222, 222);
-    color: rgb(29, 31, 29);
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;600;700&family=Special+Elite&display=swap');
+
+*{
+    margin:0;
+    padding:0;
+    border:0;
 }
+
+body {
+    
+    font-family: 'Oswald', sans-serif;     
+    font-size: 18px;
+    background-color: rgb(226, 226, 226);
+    color:rgb(48, 48, 48);
+    margin:0;
+}
+
+ h1 {
+    font-family: 'Special Elite', cursive;
+    font-size: 38px;
+ }
+ h2 {
+     font-family: 'Special Elite', cursive;
+     font-size: 24px;
+ }
+ h3 {
+    font-size: 20px; 
+ }
+ /* ---------- NAVIGATION ---------- */
