--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,3 +105,89 @@ body {
     }
 
 /* ---------- FOOTER ---------- */
+footer {
+    width: 100%;
+	bottom: 0px;
+	height: 3.5rem;
+    background-color:rgb(99 175 52);
+    font-size: 1.0rem;
+    color: white;
+	display: flex;
+	    -webkit-box-align: center;
+	    -ms-flex-align: center;
+	align-items: center;
+	position: fixed;
+	z-index: 1020;
+}
+
+dl, ol, ul {
+    margin-top: 0;
+    margin-bottom: 0rem;
+}
+footer .contact {
+	width: 100%;
+    font-weight: 300;
+    align-content: center;
+    letter-spacing: 2px;
+    margin: 0px 0px;
+    margin-left: 15px;
+}
+
+.contact-links li {
+    display: inline-block;
+}
+
+.contact-links i {
+    font-size:110%;
+}
+
+.contact-links a:hover {
+    color:black;
+    margin: auto 5%;
+    font-weight: 300;
+}
+
+.contact-links-item a {
+    color: white;
+    margin-right: 10px;
+    padding-left: 2px;
+    text-decoration: none;
+}
+
+.social-network {
+    font-size: 110%;
+    width: 40%;
+	margin: auto 5%;
+	list-style: none;
+	    display: -webkit-box;
+        display: -ms-flexbox;
+	display: flex;
+        -webkit-box-pack: space-around;
+        -ms-flex-pack: space-around;
+	justify-content: space-around;
+        -webkit-box-align: center;
+        -ms-flex-align: center;	
+    align-items: center;
+}
+
+.social-network a {
+    color: white;
+	margin: 5px;
+	padding: 5px;
+}
+
+.social-network i:hover{
+     color:black;
+}
+
+ @media screen and (max-width: 523px) {
+   .contact-links i {
+    font-size:100%;
+}
+
+footer .contact {
+    font-size:0.9rem;
+}
+ }
+
+    
