--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,8 +176,9 @@ body {
 /* ---------- ABOUT ---------- */
 
 
-.about{
+#about{
     width: 70%;
+    height: 600px;
 }
 .about-content {
         margin-top: 12px;
@@ -246,6 +247,21 @@ h3 {
 
 
 
+#image-tours {
+   background-attachment: fixed;
+   /* ---------- Credit Photo by Sebastian Voortman from Pexels ---------- */
+    background-image: url('../images/forest.jpg');
+    background-position: center;
+    background-size: cover;
+    width: 100vw;
+    height: 600px;
+    padding-bottom: 50px;
+    background-repeat: no-repeat;
+    position: relative;
+    font-weight: 300;
+    margin-bottom: 0px; 
+}
+
 /* ---------- CONTACT ---------- */
 
 contact-sent-btn{
@@ -257,6 +273,21 @@ contact-sent-btn{
     display: block;
 }
 
+
+#image-contact {
+   background-attachment: fixed;
+   /* ---------- Credit Photo by Sebastian Voortman from Pexels ---------- */
+    background-image: url('../images/happy-girl.jpg');
+    background-position: center;
+    background-size: cover;
+    width: 100vw;
+    height: 600px;
+    padding-bottom: 50px;
+    background-repeat: no-repeat;
+    position: relative;
+    font-weight: 300;
+    margin-bottom: 0px; 
+}
 
 /* ---------- FOOTER ---------- */
 footer {
