add change a navbar and connecting links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,6 +239,17 @@ h3 {
     font-size: 20px;
     text-align: center;
 }
+
+/* ---------- TOURS ---------- */
+#tour {
+    margin-right: 1rem;
+}
+
+
+
+
+
+
 /* ---------- GALLERY ---------- */
 #gallery{
 clear: both;
